@@ -1,69 +1,0 @@
-Changes
-lib/MojoX/Tusu.pm
-lib/MojoX/Tusu/ComponentBase.pm
-lib/MojoX/Tusu/Plugin/Mojolicious.pm
-lib/MojoX/Tusu/Plugin/Util.pm
-lib/MojoX/Tusu/PluginBase.pm
-Makefile.PL
-MANIFEST
-README.pod
-t/00_load.t
-t/00_partial/01.t
-t/00_partial/f/t01/permission_ng/permission_ng.html
-t/00_partial/f/t01/permission_ng/permission_ok.html
-t/00_partial/f/t01/permission_ok/permission_ng.html
-t/00_partial/f/t01/permission_ok/permission_ok.html
-t/00_partial/f/t02/a/index.html
-t/00_partial/f/t02/index.html
-t/01_basic/01_constractor.t
-t/01_basic/02_template_load.t
-t/01_basic/03_ComponentBase.t
-t/01_basic/04_include.t
-t/01_basic/06_extensions_to_render.t
-t/01_basic/07_Component_render.t
-t/01_basic/08_template_not_found.t
-t/01_basic/09_static.t
-t/01_basic/10_permission.t
-t/01_basic/11_encoding.t
-t/02_lite/02_template_load.t
-t/02_lite/03_ComponentBase.t
-t/02_lite/04_include.t
-t/02_lite/06_extensions_to_render.t
-t/02_lite/07_Component_render.t
-t/02_lite/08_template_not_found_dev.t
-t/02_lite/08_template_not_found_pro.t
-t/02_lite/09_static.t
-t/02_lite/10_permission.t
-t/99_extra/bench.t
-t/99_pod.t
-t/99_podcoverage.t
-t/public_html/02/02_02.html
-t/public_html/02/index.html
-t/public_html/03/03_ComponentBase01.html
-t/public_html/03/03_ComponentBase02.html
-t/public_html/03/03_ComponentBase03.html
-t/public_html/04/index.html
-t/public_html/04/index2.html
-t/public_html/04/index3.html
-t/public_html/04/index4.html
-t/public_html/04/sub.html
-t/public_html/04/sub/sub2.html
-t/public_html/04/sub/sub3-filename.html
-t/public_html/04/sub4.html
-t/public_html/06/index.html
-t/public_html/06/index.txt
-t/public_html/07/some_component/index.html
-t/public_html/07/some_component/index2.html
-t/public_html/08/dir/dummy.html
-t/public_html/08/directory_index_fail/dummy.html
-t/public_html/08/err/403.html
-t/public_html/08/err/404.html
-t/public_html/08/err/500.html
-t/public_html/08/index.html
-t/public_html/09/img/a.gif
-t/public_html/10/permission_ng/permission_ng.html
-t/public_html/10/permission_ng/permission_ok.html
-t/public_html/10/permission_ok/permission_ng.html
-t/public_html/10/permission_ok/permission_ok.html
-t/public_html/11/index.html
-t/public_html/index.html
